--- a/pages/global.css
+++ b/pages/global.css
@@ -27,7 +27,7 @@ button {
     cursor: pointer;
     display: inline-flex;
     fill: #000;
-    font-family: Inter,sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
     height: 48px;
