Add chakra and framer motion

--- a/components/tasks/task.module.css
+++ b/components/tasks/task.module.css
@@ -1,8 +1,9 @@
-.taskList {
+.taskItem {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    font-size: 1.2rem;
 }
 
 .btnDelete {
@@ -11,6 +12,9 @@
 
 .btnInsert,
 .btnDeleteAll {
-    margin-left: 10px;
+    margin-right: 5px;
 }
 
+.isComplete {
+    text-decoration: line-through;
+}
